# python-article

./: README.md  main.py  pyproject.toml
.github/workflows/: lint_type_check.yml
src/: migrator.py
src/repositories/: abs_crud.py  task_repository.py
src/schemas/: task.py
tests/: test_task_repository.py
tests/repositories/: test_task_repository.py
