[tool.poetry]
name = "python-article"
version = "0.1.0"
description = ""
authors = ["hugomufraggi <hugo.mufraggi@epitech.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I"]
ignore = ["D100", "D104", "I001"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D"]

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
